test bench done

--- a/config.properties
+++ b/config.properties
@@ -2,13 +2,21 @@
 
 # When running the program, if use num cores is set to true, the program will ignore use num thread settings.
 # otherwise n threads are spawned specified by use num thread.
-use_num_cores=false
-use_num_thread=1000
+use_num_cores=true
+use_num_thread=16
 
 # Example: contact_points=127.0.0.1, 192.168.1.2, 192.168.1.3
 contact_points=127.0.0.1
 
+# If true, bbox is effective. Otherwise fixed lat lng is effective
+rand_cell=false
+
 # BBox range: left, bottom, right, top
 bbox=-109.579393, 36.438802, -101.757128, 41.228100
 
+# Order: lat, lng
+fixed_lat_lng=37.322266775311924, -108.89875724350199
 
+# Random level distribution: fixed size 10, using an int array
+#rand_level_dist=10,20,30,40,50,60,70,80,90,100
+rand_level_dist=30,50,60,68,75,81,86,90,94,100
