--- a/config.properties
+++ b/config.properties
@@ -2,14 +2,15 @@
 
 # When running the program, if use num cores is set to true, the program will ignore use num thread settings.
 # otherwise n threads are spawned specified by use num thread.
-use_num_cores=true
-use_num_thread=16
+use_num_cores=false
+use_num_thread=2
 
 # Example: contact_points=127.0.0.1, 192.168.1.2, 192.168.1.3
-contact_points=127.0.0.1
+contact_points=138.67.186.230
+cluster_name=AlamodeFourNodeCluster
 
 # If true, bbox is effective. Otherwise fixed lat lng is effective
-rand_cell=false
+rand_cell=true
 
 # BBox range: left, bottom, right, top
 bbox=-109.579393, 36.438802, -101.757128, 41.228100
